12-09-2024
- add fzf and FD to home-manager
- update nur overlay
- Hyprland working again (Choose "Hyprland" from SDDM)
- Switch places for Run and Active windows in rofi


12-01-2024 - 12-08-2024
- commit to nix-config v5
- update to nixos 25.05
- redo readme

11-28-2024
- update changelog
- waybar service will now only attempt to execute on hyprland if waybar enabled
- polybar will also only activate on i3 if it is enabled
- DNS resolution for wg0 on garth
- Update Hyprland keybinds


11-26-2024
- Fixed nasty bug with the i3-hyprland-windows
  - Now a systemd service
	- removed unncessary while loop
	- throw systemd output into the void instead of spamming the journal
- proper polybar integration with systemd
- finally make use of the waybar service instead of just spawning it in the background like a dum dum


11-25-2024
- add dig utility


11-24-2024
- more vim plugins:
  - harpoon
	- vim-fugitive
	- undotree
- new vim theme "vague"
- add scan software gscan2pdf
- fix weird error in yazi with the $EDITOR variable


11-23-2024
- add some keybinds to neovim
- add autopairs to neovim


11-22-2024
- added battery monitor service for dunst
- configuration for hostname resolution on the wireguard server
- telescope now can find buffers <leader>fb
- add lazygit


11-21-2024
- working treesitter
- working nix and lua lsp and formatter for neovim
- rocking gruvbox theme for neovim
- fixed clipboard issue in vim by place xclip on shell path
- moved desktop specific tools to nixos instead of HM, specifically xmodmap, and xclip are now global packages if i3 is enabled


11-19-2024
- bit off way more than I could ever chew with neovim so going back to vscode and working on vim on the side.
- add a todo list to vim in readme


11-18-2024
- fixed error with yazi launching using the FM keybind $Mod+m in i3


11-17-2024
- documented some Hm modules
- switched to neovim
- neovim configuration for HM (#not copied)
- update flake input "icons"


11-16-2024