@@ -18,9 +18,6 @@ in
         ExecStartPre = "${lib.getExe pkgs.bash} -c 'while ! (i3-msg -t get_version >/dev/null 2>&1 || swaymsg -t get_version >/dev/null 2>&1); do sleep 1; done'";
         ExecStart = "${script}";
         Restart = "on-failure";
-        RestartSec = 5;
-        StartLimitIntervalSec = 30;
-        StartLimitBurst = 3;
         type = "simple";
       };
       Install.WantedBy = [ "graphical-session.target" ];
