@@ -1,3 +1,12 @@
+12-20-2024
+- created a wallpaper daemon for xorg using feh.
+- currently the omori-calendar project only works on xorg as I need to finish swww implementation
+
+
+12-19-2024
+- Sway (UWSM)
+
+
 12-09-2024
 - add fzf and FD to home-manager
 - update nur overlay
